# raytracing

./: .gitmodules  CMakeLists.txt  TODO.md
include/: alloc.cuh  curand_state.cuh  hit_result.cuh  light.cuh  material.cuh  multisample_mesh.cuh  optional.cuh  plane.cuh  ray.cuh  scene_object.cuh  sphere.cuh  triangle.cuh  variant.cuh  viewport.cuh  work_partition.cuh
include/container/: alloc.cuh  shared_buffer.cuh  vector.cuh
include/core/: interval.cuh  light.cuh  material.cuh  plane.cuh  ray.cuh  scene_object.cuh  sphere.cuh  transform.cuh  triangle.cuh
include/cuda_utils/: check_error.cuh  curand_state.cuh
include/pipeline/: multisample_mesh.cuh  viewport.cuh  work_partition.cuh
src/: CMakeLists.txt  check_error.cu  main.cu
test/: CMakeLists.txt  spheretest.cu  triangletest.cu
